tests/ui/async-await/issues/issue-78600.stderr
error[E0658]: `async fn` return type cannot contain a projection or `Self` that references lifetimes from a parent scope
  --> $DIR/issue-78600.rs:6:33
   |
LL |     async fn new(i: &'a i32) -> Result<Self, ()> {
   |                                 ^^^^^^^----^^^^^
   |                                        |
   |                                        help: consider spelling out the type instead: `S<'a>`
   |
   = note: see issue #103532 <https://github.com/rust-lang/rust/issues/103532> for more information
   = help: add `#![feature(impl_trait_projections)]` to the crate attributes to enable

error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/issue-78600.rs:6:50
   |
LL |       async fn new(i: &'a i32) -> Result<Self, ()> {
   |  __________________________________________________^
LL | |
LL | |         Ok(S(&22))
LL | |     }
   | |_____^
   |
note: lifetime used multiple times
  --> $DIR/issue-78600.rs:5:6
   |
LL | impl<'a> S<'a> {
   |      ^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0658, E0792.
For more information about an error, try `rustc --explain E0658`.
